Added adapter functions so user can provide typed functions

--- a/README.adoc
+++ b/README.adoc
@@ -10,10 +10,10 @@ Implementation of optional similar to Java.
 - Contains negative methods (NotEqual, NotEqualValue, FilterNot)
 - Compares against another Optional (Equal/NotEqual) or against another value (EqualValue/NotEqualValue)
 - Implements goiter.Iterable, provides an iterator of zero or one elements
-- Since goiter.Iter has specialization methods such as BoolValue and NextBoolValue, there is no need for specialized classes like Java OptionalInt 
-- Has both MapTo{float, int, string} and FlatMapTo{float,int,string}
+- Since goiter.Iter has specialization methods such as IntValue and NextIntValue, there is no need for specialized classes like Java OptionalInt
 - Implements database/sql/driver Scanner and Valuer interfaces for compatibility with values read from/written to a column
+- Implements Stringer to return "Optional" or fmt.Sprintf("Optional (%v)", value)
 
 == Constructors
 
-Of(...interface{}) returns an Optional that is empty if no args are passed, or present with the first arg passed.
+Of(...interface{}) returns an empty Optional if no args are passed or nil is passed, or a present Optional with the first arg passed.
